# Multi_Agent_Coding_Assitant

./: README.md  final_solution.py
agentic_code/: .env.example  .gitignore  README.md  final_solution.py  pyproject.toml  task_input.txt
agentic_code/src/agentic_code/: crew.py  main.py
agentic_code/src/agentic_code/config/: agents.yaml  tasks.yaml
agentic_code/ui_layer/: app.py
tests/: check_connection.py
