[project]
name = "agentic_code"
version = "0.1.0"
description = "agentic_code using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.9.2",
    "crewai[tools]==1.9.2",
    "langchain-ollama>=1.0.1",
]

[project.scripts]
agentic_code = "agentic_code.main:run"
run_crew = "agentic_code.main:run"
train = "agentic_code.main:train"
replay = "agentic_code.main:replay"
test = "agentic_code.main:test"
run_with_trigger = "agentic_code.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
